Removed shadows in Pages page Renamed articles.js to page.js

--- a/styles/page.css
+++ b/styles/page.css
@@ -25,3 +25,9 @@ article br {
     content: ""; 
     margin-top: 24px; 
 }
+#page-content {
+    text-shadow: 0rem 0rem 0rem;
+}
+a {
+    color: var(--SF);
+}
