--- a/styles/page.css
+++ b/styles/page.css
@@ -8,7 +8,7 @@
 .header .logo {
     display: contents;
     float: left;
-    font-size: 2em;
+    font-size: 3em;
     padding: 1% 2%;
     text-decoration: none;
 }
@@ -41,4 +41,10 @@ a {
     position: absolute;
     right: 0px;
     padding: 10px 40px;
+}
+
+#time{
+    text-shadow: 0 0 20px 0;
+    padding: 0;
+    margin-left: 70%;
 }
