--- a/styles/main.css
+++ b/styles/main.css
@@ -53,7 +53,7 @@ a {
 #update-window,
 .box {
 	margin-bottom: 2vh;
-	border: 1px solid var(--SF);
+	border: 1px thin var(--SB);
 	border-radius: 12px;
 }
 
@@ -64,7 +64,6 @@ a {
 	box-shadow: var(--SB) 0 8px 15px;
 	overflow: auto;
 	scrollbar-color: hidden;
-
 }
 
 /* button styles */
